# mail-server-anal

./: .gitignore  Cargo.toml  Dockerfile  bash_rsync_files.sh
api/migrations/: 001_create_tables.sql
api/src/: main.rs  read_log_files.rs
api/src/func/: mod.rs  parse_log_content.rs
rocket/: Cargo.toml
rocket/src/: main.rs  models.rs
rocket/src/api/: mod.rs  read_files.rs
rocket/src/base/: create_tables.rs  mod.rs  save_message.rs  save_status.rs
rocket/static/: index.html  login.html  login.js
src/: main.rs  models.rs
src/api/: check_token.rs  drop_token.rs  get_fuck_emails.rs  get_leaderboard.rs  get_messages.rs  get_senders.rs  mod.rs  read_files.rs  read_known_users.rs  user_login.rs
src/base/: create_tables.rs
static/: index.html  lists.html  login.html  main.html  sender.html
static/css/: base.css  gir.css  lists-table.css  login.css  main.css  search.css  style.css  table.css  test.css
static/js/: calendar.js  gir.js  lists-table.js  login.js  loginCheck.js  logout.js  multi.js  sender.js  table.js  table_old.js
static_old/css/: header.css  main.css  modal.css
static_old/js/: login.js
web/: Cargo.toml
web/src/: main.rs
web/src/func/: button_read_files.rs  mod.rs
