[package]
name = "rocket_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_contrib = {version = "0.4.11", features = ["handlebars_templates"]}
serde = { version = "1.0", features = ["derive"] }
